--- a/src/css/main.css
+++ b/src/css/main.css
@@ -167,3 +167,26 @@ tr,
 td {
       border: color #ddd;
   }
+
+  .card {
+    width: 100%; 
+    max-width: 350px; 
+    height: 350px; 
+    padding-top: 40px; 
+    margin: 40px;
+    transition: all 0.35s ease-in-out;
+    
+}
+
+.card-body {
+    text-align: center;
+   
+}
+
+.card-title {
+    font-size: 1.25rem; 
+    margin-top: 1.5rem; 
+}
+a.card-link{
+    text-decoration: none;
+}
